--- a/css/style.css
+++ b/css/style.css
@@ -1823,7 +1823,7 @@ img {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgb(23 135 224 / 97%);
+    background-color: rgba(85, 51, 85, 0.848);
     z-index: -1;
 }
 
